Revision history for App-Rak-Complete

{{$NEXT}}

0.0.11  2024-05-08T15:50:31+02:00
    - Bump several dependencies
    - Add dependency on PDF::Extract
    - Add dependency on MoarVM::Bytecode
    - Update copyright year

0.0.10  2023-08-04T15:26:34+02:00
    - Bump several dependencies

0.0.9  2022-11-24T22:59:59+01:00
    - Bump dependency on App::Rak in such a way that just
      updates on App::Rak without any of its dependencies
      being updated, would no longer be needed (although
      in itself useful: this is more intended for bugfix
      releases rather than new features)

0.0.8  2022-11-23T22:50:31+01:00
    - Add dependency on JSON::Path
    - Bump dependency on App::Rak

0.0.7  2022-11-19T20:11:37+01:00
    - Bump dependency on App::Rak

0.0.6  2022-11-19T01:11:53+01:00
    - Bump dependency on App::Rak really properly

0.0.5  2022-11-19T01:09:29+01:00
    - Bump dependency on App::Rak properly

0.0.4  2022-11-18T17:36:48+01:00
    - Bump dependency on App::Rak

0.0.3  2022-11-18T13:35:55+01:00
    - Bump dependencies on Text::CSV and App::Rak

0.0.2  2022-11-16T13:21:57+01:00
    - Bump dependencies on Text::CSV and App::Rak

0.0.1  2022-11-15T12:37:30+01:00
    - Initial version