@@ -1,4 +1,4 @@
-name: test
+name: linux
 
 on:
   push:
@@ -14,7 +14,6 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-          - macos-latest
         raku-version:
           - 'latest'
     runs-on: ${{ matrix.os }}
