@@ -10,4 +10,5 @@ filename = lib/App/Rak/Complete.rakumod
 ; match = ^ 'xt/'
 
 [Badges]
-provider = github-actions/test.yml
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
